file(GLOB COMPONENTS "*.cpp")
foreach(COMP ${COMPONENTS})
  get_filename_component(COMPONENT_NAME ${COMP} NAME_WE)
  add_library(${COMPONENT_NAME} MODULE ${COMP})
  target_link_libraries(${COMPONENT_NAME} DSPatch openlf debug;clifd optimized;clif ${Boost_LIBRARIES})
endforeach()

file(GLOB CIRCUITS "*.gml")
foreach(CIRC ${CIRCUITS})
  get_filename_component(CIRC_NAME ${CIRC} NAME)
  if (OPENLF_COMPILER_MSVC)
    configure_file(${CIRC} "${CMAKE_CURRENT_BINARY_DIR}/Release/${CIRC_NAME}" COPYONLY)
    configure_file(${CIRC} "${CMAKE_CURRENT_BINARY_DIR}/Debug/${CIRC_NAME}" COPYONLY)
  else()
    configure_file(${CIRC} "${CMAKE_CURRENT_BINARY_DIR}/${CIRC_NAME}" COPYONLY)
  endif()
endforeach()
